--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -39,14 +39,11 @@ $(document).ready(function(){
 			burger_name: $("#brgr").val().trim()
 			};// end
 
-		console.log(" from main.handlebars (line 35)" +  newBurger.burger_name);
-
 		$.ajax("/api/burger",{
 				type: "POST",
 				data: newBurger
 			}).then(
 				function(result){
-					//tst = result;
 
 					var newBurger = $("<div id=nbDiv"+result.insertId+">");
 					newBurger.addClass("newBurger burger-color");
@@ -55,6 +52,7 @@ $(document).ready(function(){
 					//ewBurger.html("New ID:" +result.insertId + "<br>New Burger: " + result.burger_name);
 					newBurger.html(nbHTML);
 					$("#2_col").append(newBurger);
+					$("#brgr").val('');
 
 			}// end fcn
 		);// end then
@@ -65,6 +63,8 @@ $(document).ready(function(){
 	$(document).on("click",".nbBtn",function() {
 
 	var burgerId = this.getAttribute('data-burgerid');
+	var moveDiv = "#nbDiv" + this.getAttribute('data-burgerid');
+	var moveId  = "#nbBtn" + this.getAttribute('data-burgerid');
 
 	// data for update to true.. 
 
@@ -73,29 +73,19 @@ $(document).ready(function(){
 		devoured: "true"
 	}
 
-alert(updatedDevoured.devoured);
 	$.ajax("/api/burger/" + burgerId,{
 		type: "PUT",
 		data: updatedDevoured
 	}).then(
 		function(result){
 
-			console.log(" did the update " + result  + " ");
-		})// end then/ajax call
-
-	{{!-- //moves the div element from col 2 to col 3...
-	//this occurs once the updae is made.
-	var tstDiv = "#nbDiv" + this.getAttribute('data-burgerid');
-	var tstId  = "#nbBtn" + this.getAttribute('data-burgerid');
-
-	alert(tstId)
-	$(tstId).remove();
-
-	$( tstDiv ).clone().appendTo( "#3_col" );
-
-	$(tstDiv).remove(); --}}
-
-	
+			if (result.affectedRows > 0){
+				// moves the div from col 3 to col 2 ..and removes the button.
+				$(moveId).remove();
+				$( moveDiv ).clone().appendTo( "#3_col" );
+				$(moveDiv).remove();
+			} // end if (result.affeced)
+		})// end then/ajax call	
 	});
 
 })// end 
@@ -103,7 +93,6 @@ alert(updatedDevoured.devoured);
 </head>
 <body>
 {{{body}}}
-{{!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> --}}
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
